Adding Contact Get Involved form to branding

--- a/main.scss
+++ b/main.scss
@@ -15,6 +15,6 @@
 .AF-Category-NSCB{
 	@import "shared/NSCB";
 }
-.AF-Category-FfW{
+.AF-Category-FfW, .AF-Category-Get-Invoved---Contact-the-Get-Involved-team{
 	@import "shared/FfW";
 }
