Added branding for CTU

--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -14,7 +14,6 @@ body {
 }
 
 .col-md-4 {
-
   #ncc-logo {
     display: block;
   }
@@ -31,6 +30,9 @@ body {
     display: none;
   }
   #FfW-logo{
+    display: none;
+  }
+  #CTU-logo{
     display: none;
   }
 }
