--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -7,6 +7,9 @@ body {
 
 #header {
   background-color: #7F1183;
+  #EMRCF-logo{
+    display: none;
+  }
 }
 
 .col-md-8 {
@@ -26,10 +29,9 @@ body {
   #FfW-logo,
   #FfW-Parks-logo,
   #CTU-logo{
-    display: none;
-  }
+  display: none;
 }
-
+}
 .brand-image {
   margin: 20px 0;
   max-height: 110px;
@@ -73,7 +75,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #LGSS-Footer,
   #YouthWorks-Footer,
   #PrivacyNotice-Footer,
-  #FfW-Footer{
+  #FfW-Footer,
+  #EMRCF-Footer{
     display: none;
   }
 
