--- a/shared/_FfW-Parks.scss
+++ b/shared/_FfW-Parks.scss
@@ -1,5 +1,5 @@
 #header {
-	background-color: #81ba27;
+	background-color: #6f9f22;
 }
 
 .col-md-4 {
@@ -12,8 +12,8 @@
 }
 
 .FooterArea {
-	background-color: #81ba27;
-	box-shadow: 0px 1000px 0px 1000px #81ba27;
+	background-color: #6f9f22;
+	box-shadow: 0px 1000px 0px 1000px #6f9f22;
 
 	#NCC-Footer {
 		display: none;
