adding branding for superfast

--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -28,7 +28,8 @@ body {
   #NSCB-logo,
   #FfW-logo,
   #FfW-Parks-logo,
-  #CTU-logo{
+  #CTU-logo,
+  #Superfast-logo{
   display: none;
 }
 }
@@ -76,7 +77,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #YouthWorks-Footer,
   #PrivacyNotice-Footer,
   #FfW-Footer,
-  #EMRCF-Footer{
+  #EMRCF-Footer,
+  #Superfast-Footer{
     display: none;
   }
 
