adding live superfast class name

--- a/main.scss
+++ b/main.scss
@@ -33,6 +33,7 @@
 .AF-Category-EMRCF---LA-on-provider{
 	@import "shared/EMRCF";	
 }
-.AF-Category-Superfast{
+.AF-Category-Superfast,
+.AF-Category-Superfast---Register-interest-in-NoDe{
 	@import "shared/Superfast";
 }
