updating Youth Works branding to match new styling

--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -10,6 +10,13 @@ body {
   #EMRCF-logo{
     display: none;
   }
+  #testHead{
+    background: white;
+    max-width: 90px;
+    padding: 10px;
+    text-align: middle;
+    margin: 10px auto;
+  }
 }
 
 .col-md-8 {
