--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -36,7 +36,8 @@ body {
   #FfW-logo,
   #FfW-Parks-logo,
   #CTU-logo,
-  #Superfast-logo{
+  #Superfast-logo,
+  #IASS-logo{
   display: none;
 }
 }
@@ -85,7 +86,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #PrivacyNotice-Footer,
   #FfW-Footer,
   #EMRCF-Footer,
-  #Superfast-Footer{
+  #Superfast-Footer,
+  #IASS-Footer{
     display: none;
   }
 
