--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -37,7 +37,10 @@ body {
   #FfW-Parks-logo,
   #CTU-logo,
   #Superfast-logo,
-  #IASS-logo{
+  #IASS-logo,
+  #OL-Grendon-logo,
+  #OL-Everdon-logo,
+  #OL-Longtown-logo{
   display: none;
 }
 }
@@ -87,7 +90,10 @@ a.btn.btn-lg.btn-primary.top:hover {
   #FfW-Footer,
   #EMRCF-Footer,
   #Superfast-Footer,
-  #IASS-Footer{
+  #IASS-Footer,
+  #OL-Grendon-Footer,
+  #OL-Everdon-Footer,
+  #OL-Longtown-Footer{
     display: none;
   }
 
