adding highways banding to access line live form

--- a/main.scss
+++ b/main.scss
@@ -6,7 +6,8 @@
 .AF-Category-YouthWorks {
 	@import "shared/YouthWorks";
 }	
-.AF-Category-Highways{
+.AF-Category-Highways,
+.AF-Category-Highways---Application-for-an-access-line{
 	@import "shared/Highways";
 }
 .AF-Category-FireRescue, 
