adding Highways branding to vehicular access live form

--- a/main.scss
+++ b/main.scss
@@ -7,7 +7,8 @@
 	@import "shared/YouthWorks";
 }	
 .AF-Category-Highways,
-.AF-Category-Highways---Application-for-an-access-line{
+.AF-Category-Highways---Application-for-an-access-line,
+.AF-Category-Highways---Application-to-be-considered-for-a-Vehicular-access{
 	@import "shared/Highways";
 }
 .AF-Category-FireRescue, 
