Adding branding to live Longtown enquires form

--- a/main.scss
+++ b/main.scss
@@ -37,7 +37,8 @@
 .AF-Category-OL-Everdon{
 	@import "shared/OL-Everdon";
 }
-.AF-Category-OL-Longtown{
+.AF-Category-OL-Longtown,
+.AF-Category-OL---Contact-Longtown-OLC{
 	@import "shared/OL-Longtown";
 }
 .AF-Category-EMRCF,
