Creating Direct Debit branding

--- a/main.scss
+++ b/main.scss
@@ -65,3 +65,7 @@ Use body[class^="AF-Category-Fire---"] to select all catagories that start with 
 .AF-Category-MaSC{
 	@import "shared/MaSC";
 }
+
+.AF-Category-Direct{
+	@import "shared/Direct";
+}
