--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -8,7 +8,8 @@ body {
 #header {
   background-color: #7F1183;
   #EMRCF-logo,
-  #MaSC-logo{
+  #MaSC-logo,
+  #Direct-logo{
     display: none;
   }
   #testHead{
@@ -42,7 +43,8 @@ body {
   #OL-Grendon-logo,
   #OL-Everdon-logo,
   #OL-Longtown-logo,
-  #Charity-logo{
+  #Charity-logo,
+  #Direct-logo{
   display: none;
 }
 }
