adding FfW-Parks braning to room enquiry form

--- a/main.scss
+++ b/main.scss
@@ -33,7 +33,8 @@ Use body[class^="AF-Category-Fire---"] to select all catagories that start with 
 }
 .AF-Category-FfW-Parks,
 .AF-Category-FFW-Parks-Country-Parks-visitor-survey,
-.AF-Category-FfW-Parks---Country-parks-outdoor-activity-evaluation-form{
+.AF-Category-FfW-Parks---Country-parks-outdoor-activity-evaluation-form,
+.AF-Category-FfW-Parks---Room-enquiry{
 	@import "shared/FfW-Parks";
 }
 .AF-Category-OL-Grendon{
