Updating MaSC branding

--- a/shared/_MaSC.scss
+++ b/shared/_MaSC.scss
@@ -1,7 +1,12 @@
 #header {
 	background-color: #FFFFFF;
+	text-align: left;
+	margin-left: 5px;
 	#MaSC-logo {
 		display: block;
+		img{
+			margin: 5px;
+		}
 	}
 }
 
@@ -29,3 +34,5 @@
 		}
 	}
 }
+
+
