Updated spelling ofcategory name and readme text

--- a/main.scss
+++ b/main.scss
@@ -22,7 +22,7 @@ body[class*="AF-Category-Fire---"]{
 	@import "shared/FireRescue";
 }
 .AF-Category-NSCB,
-body[class*="AF-Category-MSCB---"]{
+body[class*="AF-Category-NSCB---"]{
 	@import "shared/NSCB";
 }
 .AF-Category-FfW,
