--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -9,7 +9,8 @@ body {
   background-color: #7F1183;
   #EMRCF-logo,
   #MaSC-logo,
-  #Direct-logo{
+  #Direct-logo,
+  #NMPAT-logo{
     display: none;
   }
   #testHead{
@@ -99,7 +100,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #OL-Everdon-Footer,
   #OL-Longtown-Footer,
   #Charity-Footer,
-  #MaSC-Footer{
+  #MaSC-Footer,
+  #NMPAT-Footer{
     display: none;
   }
 
