--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -45,7 +45,8 @@ body {
   #OL-Everdon-logo,
   #OL-Longtown-logo,
   #Charity-logo,
-  #Direct-logo{
+  #Direct-logo,
+  #NASS-logo{
   display: none;
 }
 }
