Updating NASS branding to ASC branding

--- a/main.scss
+++ b/main.scss
@@ -89,7 +89,7 @@ body[class*="AF-Category-NMPAT---"]{
 	@import "shared/NMPAT";
 }
 
-.AF-Category-NASS,
-body[class*="AF-Category-NASS---"]{
-	@import "shared/NASS";
+.AF-Category-ASC,
+body[class*="AF-Category-ASC---"]{
+	@import "shared/ASC";
 }
