--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -46,7 +46,8 @@ body {
   #OL-Longtown-logo,
   #Charity-logo,
   #Direct-logo,
-  #NASS-logo{
+  #ASC-logo,
+  #test-logo{
   display: none;
 }
 }
