--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -10,7 +10,8 @@ body {
   #EMRCF-logo,
   #MaSC-logo,
   #Direct-logo,
-  #NMPAT-logo{
+  #NMPAT-logo,
+  #BETA-Text{
     display: none;
   }
   #testHead{
