--- a/main.scss
+++ b/main.scss
@@ -97,3 +97,7 @@ body[class*="AF-Category-ASC---"]{
 body[class*="AF-Category-CFE---school-transport"]{
 	@import "shared/SchoolTransport";
 }
+.AF-Category-CFE---,
+body[class*="AF-Category-CFE---"]{
+	@import "shared/CFE";
+}
