--- a/shared/_Highways.scss
+++ b/shared/_Highways.scss
@@ -1,5 +1,5 @@
 #header {
-	background-color: #339900;
+	background-color: #2C8500;
 }
 
 .col-md-4 {
@@ -9,8 +9,8 @@
 }
 
 .FooterArea {
-	background-color: #339900;
-	box-shadow: 0px 1000px 0px 1000px #339900;
+	background-color: #2C8500;
+	box-shadow: 0px 1000px 0px 1000px #2C8500;
 
 	#NCC-Footer {
 		display: none;
