--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -102,7 +102,7 @@ a.btn.btn-lg.btn-primary.top:hover {
   #Charity-Footer,
   #MaSC-Footer,
   #NMPAT-Footer,
-  #AFC-footer{
+  #AFC-Footer{
     display: none;
   }
 
