--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -47,7 +47,8 @@ body {
   #ASC-logo,
   #test-logo,
   #CFE-logo,
-  #AFC-logo{
+  #AFC-logo,
+  #StandOut-logo{
   display: none;
 }
 }
@@ -102,7 +103,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #Charity-Footer,
   #MaSC-Footer,
   #NMPAT-Footer,
-  #AFC-Footer{
+  #AFC-Footer,
+  #StandOut-Footer{
     display: none;
   }
 
