Updated Stand Out branding

--- a/shared/_StandOut.scss
+++ b/shared/_StandOut.scss
@@ -1,5 +1,5 @@
 #header {
-	background-color: black;
+	background-color: #d60e51;
 }
 
 .col-md-4 {
@@ -13,8 +13,8 @@
 }
 
 .FooterArea {
-	background-color: black;
-	box-shadow: 0px 1000px 0px 1000px black;
+	background-color: #d60e51;
+	box-shadow: 0px 1000px 0px 1000px #d60e51;
 
 	#NCC-Footer {
 		display: none;
