--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -48,7 +48,8 @@ body {
   #test-logo,
   #CFE-logo,
   #AFC-logo,
-  #StandOut-logo{
+  #StandOut-logo,
+  #Therapy-logo{
   display: none;
 }
 }
@@ -104,7 +105,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #MaSC-Footer,
   #NMPAT-Footer,
   #AFC-Footer,
-  #StandOut-Footer{
+  #StandOut-Footer,
+  #Therapy-Footer{
     display: none;
   }
 
