--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -49,7 +49,8 @@ body {
   #CFE-logo,
   #AFC-logo,
   #StandOut-logo,
-  #Therapy-logo{
+  #Therapy-logo,
+  #CFE-social-logo{
   display: none;
 }
 }
@@ -106,7 +107,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #NMPAT-Footer,
   #AFC-Footer,
   #StandOut-Footer,
-  #Therapy-Footer{
+  #Therapy-Footer,
+  #CFE-social-Footer{
     display: none;
   }
 
