adding FN branding

--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -50,7 +50,8 @@ body {
   #AFC-logo,
   #StandOut-logo,
   #Therapy-logo,
-  #CFE-social-logo{
+  #CFE-social-logo,
+  #FN-logo{
   display: none;
 }
 }
@@ -108,7 +109,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #AFC-Footer,
   #StandOut-Footer,
   #Therapy-Footer,
-  #CFE-social-Footer{
+  #CFE-social-Footer,
+  #FN-Footer{
     display: none;
   }
 
