--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -51,7 +51,8 @@ body {
   #StandOut-logo,
   #Therapy-logo,
   #CFE-social-logo,
-  #FN-logo{
+  #FN-logo,
+  #DN-logo{
   display: none;
 }
 }
@@ -110,7 +111,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #StandOut-Footer,
   #Therapy-Footer,
   #CFE-social-Footer,
-  #FN-Footer{
+  #FN-Footer,
+  #DN-Footer{
     display: none;
   }
 
