--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -52,7 +52,8 @@ body {
   #Therapy-logo,
   #CFE-social-logo,
   #FN-logo,
-  #DN-logo{
+  #DN-logo,
+  #CTF-logo{
   display: none;
 }
 }
@@ -112,7 +113,8 @@ a.btn.btn-lg.btn-primary.top:hover {
   #Therapy-Footer,
   #CFE-social-Footer,
   #FN-Footer,
-  #DN-Footer{
+  #DN-Footer,
+  #CTF-Footer{
     display: none;
   }
 
