--- a/shared/_NCC.scss
+++ b/shared/_NCC.scss
@@ -53,7 +53,9 @@ body {
   #CFE-social-logo,
   #FN-logo,
   #DN-logo,
-  #CTF-logo{
+  #CTF-logo,
+  #NNC-logo,
+  #WNC-logo{
   display: none;
 }
 }
@@ -114,7 +116,9 @@ a.btn.btn-lg.btn-primary.top:hover {
   #CFE-social-Footer,
   #FN-Footer,
   #DN-Footer,
-  #CTF-Footer{
+  #CTF-Footer,
+  #NNC-Footer,
+  #WNC-Footer{
     display: none;
   }
 
