--- a/shared/_Dual.scss
+++ b/shared/_Dual.scss
@@ -1,26 +1,25 @@
 #header {
-	background-color: #ffffff;
+	background-color: #e9e9e9;
 }
 
 .col-md-4 {
 	#ncc-logo {
 		display: none;
 	}
-	#NNC-logo{
+	#Dual-logo{
 		display: block;
 	}
 }
-.new-logos{display:none}
 
 .FooterArea {
-	background-color: #000000;
-	box-shadow: 0px 1000px 0px 1000px #000000;
+	background-color: #2e2e2e;
+	box-shadow: 0px 1000px 0px 1000px #2e2e2e;
 
 	#NCC-Footer {
 		display: none;
 	}
 
-	#NNC-Footer{
+	#Dual-Footer{
 		display: block;
 	}
 	
